@@ -106,6 +106,16 @@ name|java
 operator|.
 name|net
 operator|.
+name|InetAddress
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
 name|URL
 import|;
 end_import
@@ -1086,6 +1096,11 @@ name|verified
 init|=
 literal|false
 decl_stmt|;
+name|String
+name|errorMessage
+init|=
+literal|""
+decl_stmt|;
 while|while
 condition|(
 operator|!
@@ -1139,9 +1154,51 @@ operator|.
 name|getHost
 argument_list|()
 operator|.
-name|startsWith
+name|equals
 argument_list|(
+literal|"N/A"
+argument_list|)
+condition|)
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
+name|errorMessage
+operator|=
+literal|"Expected host name to start with '"
+operator|+
 name|hostName
+operator|+
+literal|"', was '"
+operator|+
+name|appReport
+operator|.
+name|getHost
+argument_list|()
+operator|+
+literal|"'. Expected rpc port to be '-1', was '"
+operator|+
+name|appReport
+operator|.
+name|getRpcPort
+argument_list|()
+operator|+
+literal|"'."
+expr_stmt|;
+if|if
+condition|(
+name|checkHostname
+argument_list|(
+name|appReport
+operator|.
+name|getHost
+argument_list|()
 argument_list|)
 operator|&&
 name|appReport
@@ -1177,6 +1234,8 @@ name|Assert
 operator|.
 name|assertTrue
 argument_list|(
+name|errorMessage
+argument_list|,
 name|verified
 argument_list|)
 expr_stmt|;
@@ -1409,6 +1468,298 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+comment|/*    * NetUtils.getHostname() returns a string in the form "hostname/ip".    * Sometimes the hostname we get is the FQDN and sometimes the short name. In    * addition, on machines with multiple network interfaces, it runs any one of    * the ips. The function below compares the returns values for    * NetUtils.getHostname() accounting for the conditions mentioned.    */
+DECL|method|checkHostname (String appHostname)
+specifier|private
+name|boolean
+name|checkHostname
+parameter_list|(
+name|String
+name|appHostname
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|String
+name|hostname
+init|=
+name|NetUtils
+operator|.
+name|getHostname
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|hostname
+operator|.
+name|equals
+argument_list|(
+name|appHostname
+argument_list|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"Unknown format for hostname "
+operator|+
+name|appHostname
+argument_list|,
+name|appHostname
+operator|.
+name|contains
+argument_list|(
+literal|"/"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"Unknown format for hostname "
+operator|+
+name|hostname
+argument_list|,
+name|hostname
+operator|.
+name|contains
+argument_list|(
+literal|"/"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|appHostnameParts
+init|=
+name|appHostname
+operator|.
+name|split
+argument_list|(
+literal|"/"
+argument_list|)
+decl_stmt|;
+name|String
+index|[]
+name|hostnameParts
+init|=
+name|hostname
+operator|.
+name|split
+argument_list|(
+literal|"/"
+argument_list|)
+decl_stmt|;
+return|return
+operator|(
+name|compareFQDNs
+argument_list|(
+name|appHostnameParts
+index|[
+literal|0
+index|]
+argument_list|,
+name|hostnameParts
+index|[
+literal|0
+index|]
+argument_list|)
+operator|&&
+name|checkIPs
+argument_list|(
+name|hostnameParts
+index|[
+literal|0
+index|]
+argument_list|,
+name|hostnameParts
+index|[
+literal|1
+index|]
+argument_list|,
+name|appHostnameParts
+index|[
+literal|1
+index|]
+argument_list|)
+operator|)
+return|;
+block|}
+DECL|method|compareFQDNs (String appHostname, String hostname)
+specifier|private
+name|boolean
+name|compareFQDNs
+parameter_list|(
+name|String
+name|appHostname
+parameter_list|,
+name|String
+name|hostname
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+if|if
+condition|(
+name|appHostname
+operator|.
+name|equals
+argument_list|(
+name|hostname
+argument_list|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+name|String
+name|appFQDN
+init|=
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+name|appHostname
+argument_list|)
+operator|.
+name|getCanonicalHostName
+argument_list|()
+decl_stmt|;
+name|String
+name|localFQDN
+init|=
+name|InetAddress
+operator|.
+name|getByName
+argument_list|(
+name|hostname
+argument_list|)
+operator|.
+name|getCanonicalHostName
+argument_list|()
+decl_stmt|;
+return|return
+name|appFQDN
+operator|.
+name|equals
+argument_list|(
+name|localFQDN
+argument_list|)
+return|;
+block|}
+DECL|method|checkIPs (String hostname, String localIP, String appIP)
+specifier|private
+name|boolean
+name|checkIPs
+parameter_list|(
+name|String
+name|hostname
+parameter_list|,
+name|String
+name|localIP
+parameter_list|,
+name|String
+name|appIP
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+if|if
+condition|(
+name|localIP
+operator|.
+name|equals
+argument_list|(
+name|appIP
+argument_list|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+name|boolean
+name|appIPCheck
+init|=
+literal|false
+decl_stmt|;
+name|boolean
+name|localIPCheck
+init|=
+literal|false
+decl_stmt|;
+name|InetAddress
+index|[]
+name|addresses
+init|=
+name|InetAddress
+operator|.
+name|getAllByName
+argument_list|(
+name|hostname
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|InetAddress
+name|ia
+range|:
+name|addresses
+control|)
+block|{
+if|if
+condition|(
+name|ia
+operator|.
+name|getHostAddress
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|appIP
+argument_list|)
+condition|)
+block|{
+name|appIPCheck
+operator|=
+literal|true
+expr_stmt|;
+continue|continue;
+block|}
+if|if
+condition|(
+name|ia
+operator|.
+name|getHostAddress
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|localIP
+argument_list|)
+condition|)
+block|{
+name|localIPCheck
+operator|=
+literal|true
+expr_stmt|;
+block|}
+block|}
+return|return
+operator|(
+name|appIPCheck
+operator|&&
+name|localIPCheck
+operator|)
+return|;
 block|}
 annotation|@
 name|Test
